@@ -19,8 +19,6 @@ export(neighborDistances)
 export(normalizeBatch)
 export(outlierGate)
 export(pickBestMarkers)
-export(plotCellIntensity)
-export(plotCellLogFC)
 export(plotSphereIntensity)
 export(plotSphereLogFC)
 export(poolCells)
