@@ -1,22 +1,0 @@
-#' @export
-plotCellLogFC <- function(...) 
-# Visualizes the cells with appropriate coloration, using a PCA plot by default.
-#
-# written by Aaron Lun
-# created 20 April 2016
-{
-    .Deprecated(new="plotSphereLogFC")
-    plotSphereLogFC(...)
-}
-
-
-#' @export
-plotCellIntensity <- function(...)
-# Visualizes the cells with appropriate coloration, using a PCA plot by default.
-#
-# written by Aaron Lun
-# created 20 April 2016
-{
-    .Deprecated(new="plotSphereIntensity")
-    plotSphereIntensity(...)
-}
